--- a/konfigurator_upraveny.html
+++ b/konfigurator_upraveny.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Konfigurátor hydraulického těsněníahoj - Dimer</title>
+    <title>Konfigurátor hydraulického těsnění - Dimer</title>
     <style>
         * {
             margin: 0;
@@ -325,7 +325,7 @@
         <!-- Výběr typu těsnění -->
         <div id="seal-selection" class="seal-types">
             <div class="seal-card" onclick="selectSealType('pistni')">
-                <h3>Pístní těsnění</h3>
+                <h3>Pístní cusantěsnění</h3>
                 <p>Dynamické těsnění umístěné kolem pístu</p>
             </div>
             <div class="seal-card" onclick="selectSealType('pistnicove')">
