--- a/konfigurator_upraveny.html
+++ b/konfigurator_upraveny.html
@@ -325,7 +325,7 @@
         <!-- Výběr typu těsnění -->
         <div id="seal-selection" class="seal-types">
             <div class="seal-card" onclick="selectSealType('pistni')">
-                <h3>Pístní cusantěsnění</h3>
+                <h3>Pístní těsnění</h3>
                 <p>Dynamické těsnění umístěné kolem pístu</p>
             </div>
             <div class="seal-card" onclick="selectSealType('pistnicove')">
@@ -334,7 +334,7 @@
             </div>
             <div class="seal-card" onclick="selectSealType('stiraci')">
                 <h3>Stírací kroužek</h3>
-                <p>Chrání vnitřek válce před nečistotami</p>
+                <p>Chrání vnitřek válce před hovnama nečistotami</p>
             </div>
             <div class="seal-card" onclick="selectSealType('vodici')">
                 <h3>Vodicí kroužek</h3>
