--- a/konfigurator_upraveny.html
+++ b/konfigurator_upraveny.html
@@ -349,7 +349,7 @@
         <!-- Formulář -->
         <div id="form-container" class="form-container">
             <div class="progress-bar">
-                <div class="progress-step active" id="step-1">1. Rozměry</div>
+                <div class="progress-step active" id="step-1">1. Rozfčččččččččččččččměry</div>
                 <div class="progress-step" id="step-2">2. Aplikace</div>
                 <div class="progress-step" id="step-3">3. Provozní podmínky</div>
                 <div class="progress-step" id="step-4">4. Materiály</div>
