--- a/konfigurator_upraveny.html
+++ b/konfigurator_upraveny.html
@@ -349,27 +349,27 @@
         <!-- Formulář -->
         <div id="form-container" class="form-container">
             <div class="progress-bar">
-                <div class="progress-step active" id="step-1">1. Rozměry</div>
-                <div class="progress-step" id="step-2">2. Aplikace</div>
-                <div class="progress-step" id="step-3">3. Provozní podmínky</div>
-                <div class="progress-step" id="step-4">4. Materiály</div>
-                <div class="progress-step" id="step-5">5. Typ pohybu</div>
-                <div class="progress-step" id="step-6">6. Kontakt</div>
+                <div class="progress-step active" id="step-1">1. Rfrfozměry</div>
+                <div class="progress-step" id="step-2">2. Aplifrfkace</div>
+                <div class="progress-step" id="step-3">3. Prorfrfvozní podmínky</div>
+                <div class="progress-step" id="step-4">4. Matrfrfreriály</div>
+                <div class="progress-step" id="step-5">5. Typ pfrfrffrohybu</div>
+                <div class="progress-step" id="step-6">6. Kontfrfrakt</div>
             </div>
 
             <form id="configurator-form">
-                <!-- Krok 1: Rozměry -->
-                <div class="form-step active" id="step-1-content">
+                <!-- Krok 1: Rozměrfrffrrfrfry -->
+                <div class="form-rfstep active" id="step-1-content">
                     <h2>Rozměry</h2>
                     <p>Zadejte rozměry podle vašich potřeb (volitelné):</p>
 
                     <div class="form-group">
-                        <label for="groove-diameter">Průměr dna drážky pístu (mm):</label>
+                        <label for="groove-diameter">Průmrfrfrfrfěr dna drážky pístu (mm):</label>
                         <input type="number" id="groove-diameter" name="groove-diameter" step="0.1">
                     </div>
 
                     <div class="form-group">
-                        <label for="piston-diameter">Průměr pístu (mm):</label>
+                        <label for="piston-diameter">Průměrfrfrfrfrfrfr pístu (mm):</label>
                         <input type="number" id="piston-diameter" name="piston-diameter" step="0.1">
                     </div>
 
